[package]
name = "websocket_server_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-tungstenite = "0.20.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
spawn = "0.0.1"
tungstenite = "0.18.0"
